--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Guided project for **Web API IV** module.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,12 @@
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "knex": "^0.16.3",
+    "node": "^11.14.0",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
-    "knex-cleaner": "^1.1.4"
+    "knex-cleaner": "^1.1.4",
+    "nodemon": "^1.18.11",
+    "package": "^1.0.1"
   }
 }
